--- a/projects/People/app/src/main/res/layout/log_layout.xml
+++ b/projects/People/app/src/main/res/layout/log_layout.xml
@@ -10,6 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/back"
-        android:onClick="doShowPersonInput"
+        android:onClick="doGoBack"
         />
 </LinearLayout>
