--- a/projects/People/app/src/main/res/layout/activity_people_main.xml
+++ b/projects/People/app/src/main/res/layout/activity_people_main.xml
@@ -4,9 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PeopleMainActivity"
-    android:orientation="vertical"
-    >
+    tools:context=".PeopleMainActivity">
 
     <Button
         android:id="@+id/buttonGotoPersonInput"
@@ -14,12 +12,6 @@
         android:layout_height="wrap_content"
         android:onClick="doNavigationToPersonInput"
         android:text="@string/gotoPersonInput" />
-    <Button
-        android:id="@+id/buttonGotoPersonDemoInput"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="doNavigationToPersonDemoInput"
-        android:text="@string/gotoPersonDemoInput" />
     <Button
         android:id="@+id/buttonGotoPeopleList"
         android:layout_width="wrap_content"
