--- a/projects/People/app/src/main/res/layout/activity_people_main.xml
+++ b/projects/People/app/src/main/res/layout/activity_people_main.xml
@@ -32,6 +32,18 @@
             android:onClick="doNavigationToDeletePerson"
             android:text="@string/gotoDeletePerson" />
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/jsonListFromServer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="doNavigationJsonListFromServer"
+            android:text="@string/gotoJsonListFromServer" />
+    </LinearLayout>
 
 
 </LinearLayout>
