--- a/projects/android/People/app/src/main/res/values/colors.xml
+++ b/projects/android/People/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="lightGreen">#CCFFCC</color>
+    <color name="lightGreen">#FFCCCC</color>
     <color name="darkGreen">#007700</color>
 
 </resources>
